[gd_scene load_steps=14 format=3 uid="uid://bnyeatbdgyxd4"]

[ext_resource type="Script" path="res://spells/BoltOfFire.gd" id="1_02ji6"]
[ext_resource type="Texture2D" uid="uid://d2aaqfew6bb2d" path="res://addons/kenney_particle_pack/fire_02.png" id="2_pim8k"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q7wfc"]
shading_mode = 0
albedo_color = Color(0.980392, 0.427451, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_8wla3"]
material = SubResource("StandardMaterial3D_q7wfc")
radius = 0.25
height = 0.5
radial_segments = 8
rings = 4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eutuq"]
albedo_color = Color(1, 0.333333, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_k5fmh"]
material = SubResource("StandardMaterial3D_eutuq")
top_radius = 0.25
bottom_radius = 0.0
height = 1.0
radial_segments = 8

[sub_resource type="SphereShape3D" id="SphereShape3D_474cx"]
radius = 0.25

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1rwir"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/sync = true

[sub_resource type="Gradient" id="Gradient_tlk8h"]
offsets = PackedFloat32Array(0, 0.437276, 0.698925, 0.87276, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.792157, 0.639216, 0, 1, 0.945098, 0.0235294, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4dv8y"]
gradient = SubResource("Gradient_tlk8h")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_glng1"]
resource_local_to_scene = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 2.0
angular_velocity_min = -360.0
angular_velocity_max = 360.0
angle_min = -360.0
angle_max = 360.0
color_ramp = SubResource("GradientTexture1D_4dv8y")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n6xoy"]
transparency = 1
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("2_pim8k")
billboard_mode = 1
billboard_keep_scale = true

[sub_resource type="PlaneMesh" id="PlaneMesh_kdr32"]
material = SubResource("StandardMaterial3D_n6xoy")
orientation = 2

[node name="BoltOfFire" type="Area3D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_02ji6")

[node name="DebugBody" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_8wla3")

[node name="Tail" type="MeshInstance3D" parent="DebugBody"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0.5)
mesh = SubResource("CylinderMesh_k5fmh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_474cx")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_1rwir")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
amount = 32
lifetime = 0.2
draw_order = 3
process_material = SubResource("ParticleProcessMaterial_glng1")
draw_pass_1 = SubResource("PlaneMesh_kdr32")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(1, 0.662863, 0.463327, 1)
omni_attenuation = 7.20997

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
